Configuration for local postgres

--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ TOOLS_VERSION=7.1
 # Make sure these values are in sync with the ones in .env-postgres file
 PGDATABASE=openmaptiles
 PGUSER=openmaptiles
-PGPASSWORD=openmaptiles
-PGHOST=postgres
+PGPASSWORD=wibble55
+PGHOST=172.16.0.34
 PGPORT=5432
 
 # BBOX may get overwritten by the computed bbox of the specific area:
