--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ TILESET_FILE=openmaptiles.yaml
 TOOLS_VERSION=7.1
 
 # Make sure these values are in sync with the ones in .env-postgres file
-PGDATABASE=openmaptiles
-PGUSER=openmaptiles
-PGPASSWORD=wibble55
-PGHOST=172.16.0.34
-PGPORT=5432
+PGDATABASE=openmaptiles_devon
+PGUSER=openmaptiles_devon
+PGPASSWORD=openmaptiles_devon
+PGHOST=postgres
+PGPORT=5439
 
 # BBOX may get overwritten by the computed bbox of the specific area:
 #   make generate-bbox-file
@@ -19,8 +19,8 @@ PGPORT=5432
 BBOX=-180.0,-85.0511,180.0,85.0511
 
 # Which zooms to generate with   make generate-tiles-pg
-MIN_ZOOM=0
-MAX_ZOOM=7
+MIN_ZOOM=9
+MAX_ZOOM=14
 
 # `MID_ZOOM` setting only works with `make generate-tiles-pg` command.  Make sure MID_ZOOM < MAX_ZOOM.
 # See https://github.com/openmaptiles/openmaptiles-tools/pull/383
@@ -30,7 +30,7 @@ MAX_ZOOM=7
 DIFF_MODE=false
 
 # The current setup assumes this file is placed inside the data/ dir
-MBTILES_FILE=tiles.mbtiles
+MBTILES_FILE=devon_tiles.mbtiles
 
 # This is the current repl_config.json location, pre-configured in the tools Dockerfile
 # Makefile and quickstart replace it with the dynamically generated one, but we keep it here in case some other method is used to run.
