Updated to use OS building layers

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ PGDATABASE=openmaptiles_devon
 PGUSER=openmaptiles_devon
 PGPASSWORD=openmaptiles_devon
 PGHOST=postgres
-PGPORT=5439
+PGPORT=5439 # make sure docker does not clash with native postgres
 
 # BBOX may get overwritten by the computed bbox of the specific area:
 #   make generate-bbox-file
