--- a/layers/geovey_ai/geovey_ai.yaml
+++ b/layers/geovey_ai/geovey_ai.yaml
@@ -8,13 +8,19 @@ layer:
     key_field: osm_id
     key_field_as_attribute: no
     srid: 900913
-    query: (SELECT osm_id, geometry, poi_id, poi_name, poi_class, poi_subclass FROM geovey_ai(!bbox!, z(!scale_denominator!))) AS t
+    query: (SELECT * FROM geovey_ai(!bbox!, z(!scale_denominator!))) AS t
   fields:
     osm_id:
     poi_id:
     poi_name:
     poi_class:
     poi_subclass:
+    title:
+    description:
+    postcode:
+    address:
+    website:
+    thumbnail:
 schema:
   - ./geovey_ai_function.sql
 
